# facebook-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
facebook_scraper/: __init__.py  __main__.py  extractors.py  facebook_scraper.py  page_iterators.py  utils.py
