[tool.poetry]
name = "facebook-scraper"
version = "0.2.59"
description = "Scrape Facebook public pages without an API key"
authors = ["Kevin Zúñiga <kevin.zun@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kevinzg/facebook-scraper"

[tool.poetry.dependencies]
python = "^3.6"
requests-html = "^0.10.0"
youtube_dl = {version = "*", optional=true}
browser-cookie3 = {version = "*", optional=true}
dateparser = "^1.0.0"
demjson3 = "^3.0.5"

[tool.poetry.dev-dependencies]
ipdb = {version = "*", python = "^3.7"}
ipython = {version = "*", python = "^3.7"}
pytest = "^6.2.2"
pytest-vcr = "^1.0.2"

[tool.poetry.extras]
youtube-dl = ["youtube_dl"]
browser-cookie3 = ["browser-cookie3"]

[tool.poetry.scripts]
facebook-scraper = 'facebook_scraper.__main__:run'

[tool.black]
line-length = 98
target-version = ["py36"]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501", "F401"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".aws-sam",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
